--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/index.js"></script>
     <script> isSetupDone(); </script>
   </head>
-  <body style="background-image: url('images/cap.jpg');">
+  <body>
     <div class="container">
       <div class="card m-auto p-2">
         <div class="card-body">
